# SiWi-R-2023-EX1

./: .gitignore  1024-1024.txt  128.-128.txt  2048-2048.txt  256-256.txt  32-32.txt  512-512.txt  64-64.txt  CMakeLists.txt  Makefile  README  README.md  ex01_example.cpp  likwid.json  likwidScript  matmul.cpp  matrices.tar.bz2  probe.cpp  strassen.json  test-matmul.py  times.json  timing-matmul.py
matrices/perfMatrices/: 128x128-1  128x128-2  256x256-1  256x256-2  32x32-1  32x32-2  512x512-1  512x512-2  64x64-1  64x64-2
